manifests/default/nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.nginx: glob:sha-*
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: jonjozwiak/hello-nginx:sha-65754dc
        imagePullPolicy: Always
        ports:
        - containerPort: 80
